--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="chat-box">
-        모두들 안뇽!
+        <h2>모두들 안뇽!</h2>
     </div>
-    <img src="http://www.pororopark.com/images/sub/circle_loppy.png" alt="루피이미지">
-    <input type="text" placeholder="명령어를 입력하세요">
-    <button>시키기</button>
+    <div class="chatbot-image">
+        <img src="http://www.pororopark.com/images/sub/circle_loppy.png" alt="루피이미지">
+    </div>
+    <div class="user-chat-box">
+        <input type="text" placeholder="명령어를 입력하세요">
+    </div>
+    <button type="button">시키기</button>
 
 </body>
 </html>
