--- a/chatbot.html
+++ b/chatbot.html
@@ -9,16 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="chat-box">
+    <div class="loopy_says">
         <h2>모두들 안뇽!</h2>
     </div>
-    <div class="chatbot-image">
+    <div class="loopy-image">
         <img src="http://www.pororopark.com/images/sub/circle_loppy.png" alt="루피이미지">
     </div>
-    <div class="user-chat-box">
-        <input type="text" placeholder="명령어를 입력하세요">
+    <div class="order">
+        <input type="text" id="console" placeholder="명령어를 입력하세요">
+        <button type="button" onclick="check_text()">시키기</button>
     </div>
-    <button type="button">시키기</button>
-
+    <script src="chatbot.js"></script>
 </body>
 </html>
