타이핑 애니메이션

--- a/chatbot.html
+++ b/chatbot.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="app" id="typed"></div>
     <div class="loopy_says">
         <h2>모두들 안뇽!</h2>
     </div>
@@ -19,6 +20,8 @@
         <input type="text" id="console" placeholder="명령어를 입력하세요">
         <button type="button" onclick="check_text()">시키기</button>
     </div>
+
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="chatbot.js"></script>
 </body>
 </html>
